--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-scripts": "5.0.1"
   },
   "devDependencies": {
-    "gh-pages": "^6.3.0"
+    "gh-pages": "^6.3.0",
+    "react-router-dom": "^7.6.1"
   },
   "browserslist": {
     "production": [
