feat: added resume page and integrated Link + HashLink hooks

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "aos": "^2.3.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.2"
+    "react-router-hash-link": "^2.4.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
@@ -30,6 +30,7 @@
     "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
     "postcss": "^8.5.4",
+    "react-router-dom": "^7.6.2",
     "tailwindcss": "^4.1.8",
     "vite": "^6.3.5"
   }
