--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
     "aos": "^2.3.4",
+    "axios": "^1.12.2",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "mongoose": "^8.19.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-hash-link": "^2.4.3"
