setup: add express server for blog post feature

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
+PORT=5050
 MONGO_URI=mongodb+srv://alexwoolee:passheadspaceword@cluster-0.whtxe27.mongodb.net/?retryWrites=true&w=majority&appName=Cluster-0
