--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@react-spring/three": "^10.0.3",
+    "@react-three/drei": "^10.7.6",
+    "@react-three/fiber": "^9.4.0",
     "@tailwindcss/vite": "^4.1.8",
     "aos": "^2.3.4",
     "axios": "^1.12.2",
@@ -21,7 +24,8 @@
     "mongoose": "^8.19.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-hash-link": "^2.4.3"
+    "react-router-hash-link": "^2.4.3",
+    "three": "^0.181.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
