feat: add socials popup

--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
 PORT=5050
 MONGO_URI=mongodb+srv://alexwoolee:passheadspaceword@cluster-0.whtxe27.mongodb.net/?retryWrites=true&w=majority&appName=Cluster-0
+VITE_GITHUB_USER=alexwoolee
+VITE_EMAIL=awl21@sfu.ca
+VITE_TIK_TOK=nintendonostalgia
+VITE_DISCORD=alexwoolee
+VITE_LINKEDIN=alexwoolee
