--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-hash-link": "^2.4.3",
+    "simplebar-react": "^3.3.2",
     "three": "^0.181.0"
   },
   "devDependencies": {
