--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.562.0",
     "mongoose": "^8.19.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-router-hash-link": "^2.4.3",
+    "remark": "^15.0.1",
     "simplebar-react": "^3.3.2",
     "three": "^0.181.0"
   },
