--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-icons": "^5.5.0",
     "react-router-hash-link": "^2.4.3",
     "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
     "simplebar-react": "^3.3.2",
     "three": "^0.181.0"
   },
